QuotesLand/force-app/main/default/objects/Poster__c/Poster__c.object-meta.xml
<CustomObject>
    <label>Poster</label>
    <nameField>
        <label>Poster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Posters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>