QuotesLand/force-app/main/default/objects/Poster__c/fields/Left_Margin__c.field-meta.xml
<CustomField>
    <fullName>Left_Margin__c</fullName>
    <label>Left Margin</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>