QuotesLand/force-app/main/default/objects/Poster__c/fields/Picture__c.field-meta.xml
<CustomField>
    <fullName>Picture__c</fullName>
    <description>Background image for the poster</description>
    <label>Picture</label>
    <referenceTo>Picture__c</referenceTo>
    <relationshipLabel>Posters</relationshipLabel>
    <relationshipName>Posters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>