QuotesLand/force-app/main/default/objects/Poster__c/fields/Word_Color__c.field-meta.xml
<CustomField>
    <fullName>Word_Color__c</fullName>
    <label>Word Color</label>
    <length>8</length>
    <type>Text</type>
</CustomField>