QuotesLand/force-app/main/default/objects/Poster__c/fields/Word_Height__c.field-meta.xml
<CustomField>
    <fullName>Word_Height__c</fullName>
    <description>Determines placement of text on the poster</description>
    <label>Word Height</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>