QuotesLand/force-app/main/default/objects/Poster__c/fields/Word_Width__c.field-meta.xml
<CustomField>
    <fullName>Word_Width__c</fullName>
    <label>Word Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>